--- a/index.html
+++ b/index.html
@@ -814,6 +814,7 @@
         &copy; <span id="displayYear"></span> All Rights Reserved By Tijil
       </p>
     </div>
+    <!--healthbot-->
     <iframe src="https://webchat.botframework.com/embed/healthcarebot-zokseprFzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU" style=" min-width:400px; width: 100%; min-height: 500px;"></iframe>
   </footer>
   <!-- footer section -->
