--- a/healthcarebot.html
+++ b/healthcarebot.html
@@ -1,1 +1,1 @@
-https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU
+https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU style='min-width:400px; width: 100%; min-height: 500px;color: aliceblue;'
