--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
       </p>
     </div>
     <!--healthbot-->
-    <iframe src="https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU" style=" min-width:400px; width: 100%; min-height: 500px;color: aliceblue;"></iframe>
+    <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
   </footer>
   <!-- footer section -->
 
