--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="">
+            <a class="navbar-brand" href="index.html" style="padding: 0.5%;">
+              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="" style="width: 95px ; height: 85px">
             </a>
             </a>
 
@@ -147,7 +147,7 @@
               </h2>
             </div>
             <p>
-              has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
             </p>
             <a href="">
               Read More
