--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="">
+            <a class="navbar-brand" href="index.html" style="padding: 0.5%;">
+              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="" style="width: 95px ; height: 85px">
             </a>
             </a>
 
