--- a/doctor.html
+++ b/doctor.html
@@ -69,8 +69,8 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="">
+            <a class="navbar-brand" href="index.html" style="padding: 0.5%;">
+              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="" style="width: 95px ; height: 85px">
             </a>
             </a>
 
@@ -142,7 +142,7 @@
           <div class="item">
             <div class="box">
               <div class="img-box">
-                <img src="images/team1.jpg" alt="" />
+                <img src="images/team1.webp" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
@@ -171,7 +171,7 @@
           <div class="item">
             <div class="box">
               <div class="img-box">
-                <img src="images/team2.jpg" alt="" />
+                <img src="images/team2.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
@@ -200,7 +200,7 @@
           <div class="item">
             <div class="box">
               <div class="img-box">
-                <img src="images/team3.jpg" alt="" />
+                <img src="images/team3.png" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
