--- a/testimonial.html
+++ b/testimonial.html
@@ -69,8 +69,8 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="">
+            <a class="navbar-brand" href="index.html" style="padding: 0.5%;">
+              <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="" style="width: 95px ; height: 85px">
             </a>
             </a>
 
@@ -156,7 +156,7 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
               </p>
             </div>
           </div>
@@ -174,7 +174,7 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
               </p>
             </div>
           </div>
@@ -192,7 +192,7 @@
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
               </p>
             </div>
           </div>
