--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+              Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.Experience the convenience of modern healthcare with our online booking platform. Easily schedule appointments, access medical records, and connect with specialists, all from the comfort of your home. 
             </p>
             <a href="">
               Read More
@@ -305,6 +305,8 @@
 
 
   <!-- footer section -->
+  <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
+  </footer>
   <footer class="footer_section">
     <div class="container">
       <p>
@@ -312,8 +314,7 @@
         
       </p>
     </div>
-    <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
-  </footer>
+  
   <!-- footer section -->
 
   <!-- jQery -->
