--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                      Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
                     </p>
                     <a href="">
                       Contact Us
@@ -182,7 +182,7 @@
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                      Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
                     </p>
                     <a href="">
                       Contact Us
@@ -214,7 +214,7 @@
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                      Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
                     </p>
                     <a href="">
                       Contact Us
@@ -329,7 +329,7 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+               Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.Experience the convenience of modern healthcare with our online booking platform. Easily schedule appointments, access medical records, and connect with specialists, all from the comfort of your home. 
             </p>
             <a href="">
               Read More
@@ -347,7 +347,7 @@
 
   <section class="treatment_section layout_padding">
     <div class="side_img">
-      <img src="images/treatment-side-img.jpg" alt="">
+      <img src="images/treatment-side-img.jpg" alt="" style="width: 250px;">
     </div>
     <div class="container">
       <div class="heading_container heading_center">
@@ -366,7 +366,7 @@
                 Nephrologist Care
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Experience dedicated Nephrologist care at our hospital, where kidney health takes center stage with specialized expertise and personalized treatment. Your well-being is our priority.
               </p>
               <a href="">
                 Read More
@@ -384,7 +384,7 @@
                 Eye Care
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Discover comprehensive eye care at our hospital, where vision health is nurtured through state-of-the-art treatments and a patient-focused approach. See the world clearly with our expert team by your side.
               </p>
               <a href="">
                 Read More
@@ -402,7 +402,7 @@
                 Pediatrician Clinic
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Our hospital proudly offers a dedicated Pediatrician Clinic, ensuring a nurturing and specialized approach to your child's health from infancy through adolescence. Trust in our experienced team for your little one's well-being.
               </p>
               <a href="">
                 Read More
@@ -420,7 +420,7 @@
                 Parental Care
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Experience exceptional parental care at our hospital, where we support the journey to parenthood with expert guidance and comprehensive medical services, ensuring a healthy and joyful transition. Your growing family's well-being is our utmost priority.
               </p>
               <a href="">
                 Read More
@@ -808,15 +808,15 @@
 
 
   <!-- footer section -->
+  <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;' ></iframe>
+  </footer>
   <footer class="footer_section">
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By Tijil
       </p>
     </div>
-    <!--healthbot-->
-    <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
-  </footer>
+   
   <!-- footer section -->
 
   <!-- jQery -->
