--- a/treatment.html
+++ b/treatment.html
@@ -54,7 +54,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : Frtmicrosoft@gmail.com
+                Email : Ftrmicrosoft@gmail.com
               </span>
             </a>
             <a href="">
@@ -152,7 +152,7 @@
                 Nephrologist Care
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Experience dedicated Nephrologist care at our hospital, where kidney health takes center stage with specialized expertise and personalized treatment. Your well-being is our priority.
               </p>
               <a href="">
                 Read More
@@ -170,7 +170,7 @@
                 Eye Care
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Discover comprehensive eye care at our hospital, where vision health is nurtured through state-of-the-art treatments and a patient-focused approach. See the world clearly with our expert team by your side.
               </p>
               <a href="">
                 Read More
@@ -188,7 +188,7 @@
                 Pediatrician Clinic
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                Our hospital proudly offers a dedicated Pediatrician Clinic, ensuring a nurturing and specialized approach to your child's health from infancy through adolescence. Trust in our experienced team for your little one's well-being.
               </p>
               <a href="">
                 Read More
@@ -206,7 +206,8 @@
                 Parental Care
               </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, velit at ultrices tristique, turpis est tristique felis, eu gravida quam libero in urna.
+                
+               Experience exceptional parental care at our hospital, where we support the journey to parenthood with expert guidance and comprehensive medical services, ensuring a healthy and joyful transition. Your growing family's well-being is our utmost priority
               </p>
               <a href="">
                 Read More
@@ -364,14 +365,15 @@
 
 
   <!-- footer section -->
+  <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
+  </footer>
   <footer class="footer_section">
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By Tijil
       </p>
     </div>
-    <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
-  </footer>
+    
   <!-- footer section -->
 
   <!-- jQery -->
