--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,9 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="healthcarebot.html">Health Bot</a>
+                  </li>
                 </ul>
               </div>
               <div class="quote_btn-container">
@@ -171,151 +174,111 @@
   </section>
   <!-- end contact section -->
 
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="info_top">
-        <div class="info_logo">
-          <a href="">
-            <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="">
-          </a>
-        </div>
-        <div class="info_form">
-          <form action="">
-            <input type="email" placeholder="Your email">
-            <button>
-              Subscribe
-            </button>
-          </form>
-        </div>
+ <!-- info section -->
+ <section class="info_section ">
+  <div class="container">
+    <div class="info_top">
+      <div class="info_logo">
+        <a href="">
+          <img src="images/Green_Medical_Logo__1_-removebg-preview.png" alt="">
+        </a>
       </div>
-      <div class="info_bottom layout_padding2">
-        <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
+      <div class="info_form">
+        <form action="">
+          <input type="email" placeholder="Your email">
+          <button>
+            Subscribe
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="info_bottom layout_padding2">
+      <div class="row info_main_row">
+        <div class="col-md-6 col-lg-3">
+          <h5>
+            Address
+          </h5>
+          <div class="info_contact">
+            <a href="">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              <span>
+                Location
+              </span>
+            </a>
+            <a href="">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span>
+                Call +01 1234567890
+              </span>
+            </a>
+            <a href="">
+              <i class="fa fa-envelope"></i>
+              <span>
+                Ftrmicrosoft@gmail.com
+              </span>
+            </a>
+          </div>
+          <div class="social_box">
+            <a href="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="info_links">
             <h5>
-              Address
+              Useful link
             </h5>
-            <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
+            <div class="info_links_menu">
+              <a class="active" href="index.html">
+                Home
               </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +01 1234567890
-                </span>
+              <a href="about.html">
+                About
               </a>
-              <a href="">
-                <i class="fa fa-envelope"></i>
-                <span>
-                  Ftrmicrosoft@gmail.com
-                </span>
+              <a href="treatment.html">
+                Treatment
               </a>
-            </div>
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+              <a href="doctor.html">
+                Doctors
               </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+              <a href="testimonial.html">
+                Testimonial
               </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+              <a href="contact.html">
+                Contact us
               </a>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_links">
-              <h5>
-                Useful link
-              </h5>
-              <div class="info_links_menu">
-                <a href="index.html">
-                  Home
-                </a>
-                <a href="about.html">
-                  About
-                </a>
-                <a href="treatment.html">
-                  Treatment
-                </a>
-                <a href="doctor.html">
-                  Doctors
-                </a>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-                <a class="active" href="contact.html">
-                  Contact us
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                LATEST POSTS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                News
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post4.png" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="info_post">
+            <h5>
+              About
+            </h5>
+            <a>Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.Experience the convenience of modern healthcare with our online booking platform.</a>
+              
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- end info_section -->
+  </div>
+</section>
+<!-- end info_section -->
 
 
   <!-- footer section -->
-  <iframe src='https://webchat.botframework.com/embed/healthcarebot-zoksepr?s=Fzx1oELAJ1o.CXxCbwpIsHv5U_3Ddj6gD0zwxbCTX_Reh8nmYq2h8pU' style='min-width:400px; width: 100%; min-height: 500px;'></iframe>
+  
   </footer>
   <footer class="footer_section">
     <div class="container">
