--- a/testimonial.html
+++ b/testimonial.html
@@ -301,10 +301,24 @@
               <h5>
                 About
               </h5>
-              <a>Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.Experience the convenience of modern healthcare with our online booking platform.</a>
+              <a>Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.</a>
                 
               </div>
             </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="info_post">
+                <h5>
+                  Treatment
+                </h5>
+              <p>
+                Nephrologist Care
+                <br>
+                Eye Care
+                <br>
+                Pediatrician Clinic
+                <br>
+                Parental Care
+              </p>
           </div>
         </div>
       </div>
