--- a/treatment.html
+++ b/treatment.html
@@ -281,13 +281,13 @@
                 Useful link
               </h5>
               <div class="info_links_menu">
-                <a href="index.html">
+                <a class="active" href="index.html">
                   Home
                 </a>
                 <a href="about.html">
                   About
                 </a>
-                <a href="treatment.html" class="active">
+                <a href="treatment.html">
                   Treatment
                 </a>
                 <a href="doctor.html">
@@ -299,67 +299,40 @@
                 <a href="contact.html">
                   Contact us
                 </a>
-                <a href="healthcarebot.html">
-                  Health Bot
-                </a>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="info_post">
               <h5>
-                LATEST POSTS
+                About
               </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
+              <a>Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.</a>
+                
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                News
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post4.png" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="info_post">
+                <h5>
+                  Treatment
+                </h5>
+              <p>
+                Nephrologist Care
+                <br>
+                Eye Care
+                <br>
+                Pediatrician Clinic
+                <br>
+                Parental Care
+              </p>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- end info_section -->
+
+
 
 
   <!-- footer section -->
