--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <p>
                       Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
                     </p>
-                    <a href="">
+                    <a href="contact.html">
                       Contact Us
                     </a>
                   </div>
@@ -180,9 +180,9 @@
                       </span>
                     </h1>
                     <p>
-                      Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
+                      Explore our state-of-the-art facilities, equipped with the latest technology and designed for patient comfort and safety.
                     </p>
-                    <a href="">
+                    <a href="contact.html">
                       Contact Us
                     </a>
                   </div>
@@ -212,9 +212,9 @@
                       </span>
                     </h1>
                     <p>
-                      Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
+                      Meet the dedicated individuals who lead our hospital, ensuring that our patients receive the best possible care. 
                     </p>
-                    <a href="">
+                    <a href="/contact.html">
                       Contact Us
                     </a>
                   </div>
@@ -739,10 +739,24 @@
               <h5>
                 About
               </h5>
-              <a>Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.Experience the convenience of modern healthcare with our online booking platform.</a>
+              <a>Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.</a>
                 
               </div>
             </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="info_post">
+                <h5>
+                  Treatment
+                </h5>
+              <p>
+                Nephrologist Care
+                <br>
+                Eye Care
+                <br>
+                Pediatrician Clinic
+                <br>
+                Parental Care
+              </p>
           </div>
         </div>
       </div>
