--- a/index.html
+++ b/index.html
@@ -670,13 +670,13 @@
         <div class="row info_main_row">
           <div class="col-md-6 col-lg-3">
             <h5>
-              Address
+              Contact us
             </h5>
             <div class="info_contact">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  123 A, Delhi, India
                 </span>
               </a>
               <a href="">
