--- a/index.html
+++ b/index.html
@@ -77,49 +77,27 @@
               <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav  ">
                   <li class="nav-item active">
-                    <a class="nav-link" href="/index.php">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.HTML">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/about.php"> About</a>
+                    <a class="nav-link" href="/about.html"> About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/treatment.php">Treatment</a>
+                    <a class="nav-link" href="/treatment.html">Treatment</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/doctor.php">Doctors</a>
+                    <a class="nav-link" href="/doctor.html">Doctors</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/testimonial.php">Testimonial</a>
+                    <a class="nav-link" href="/testimonial.html">Testimonial</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/contact.php">Contact Us</a>
+                    <a class="nav-link" href="/contact.html">Contact Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/healthcarebot.php">Health Bot</a>
+                    <a class="nav-link" href="/healthcarebot.html">Health Bot</a>
                   </li>
                 </ul>
-              </div>
-              <div class="quote_btn-container">
-                <a href="/php/login_form.php">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Login
-                  </span>
-                </a>
-                </div> 
-                <div class="quote_btn-container">
-                <a href="/php/register_form.php">
-               
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Sign Up
-                  </span>
-                </a>
-                <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form>
               </div>
             </div>
           </nav>
@@ -153,7 +131,7 @@
                     <p>
                       Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.
                     </p>
-                    <a href="/contact.php">
+                    <a href="/contact.html">
                       Contact Us
                     </a>
                   </div>
@@ -185,7 +163,7 @@
                     <p>
                       Explore our state-of-the-art facilities, equipped with the latest technology and designed for patient comfort and safety.
                     </p>
-                    <a href="/contact.php">
+                    <a href="/contact.html">
                       Contact Us
                     </a>
                   </div>
@@ -217,7 +195,7 @@
                     <p>
                       Meet the dedicated individuals who lead our hospital, ensuring that our patients receive the best possible care. 
                     </p>
-                    <a href="/contact.php">
+                    <a href="/contact.html">
                       Contact Us
                     </a>
                   </div>
@@ -332,7 +310,7 @@
             <p>
                Discover a place of healing and hope, where medical expertise meets compassionate care. Our hospital is dedicated to serving you and your loved ones with the highest standard of healthcare.Experience the convenience of modern healthcare with our online booking platform. Easily schedule appointments, access medical records, and connect with specialists, all from the comfort of your home. 
             </p>
-            <a href="/about.php">
+            <a href="/about.html">
               Read More
             </a>
           </div>
@@ -719,19 +697,19 @@
                 <a class="active" href="index.html">
                   Home
                 </a>
-                <a href="/about.php">
+                <a href="/about.html">
                   About
                 </a>
-                <a href="/treatment.php">
+                <a href="/treatment.html">
                   Treatment
                 </a>
-                <a href="/doctor.php">
+                <a href="/doctor.html">
                   Doctors
                 </a>
-                <a href="/testimonial.php">
+                <a href="/testimonial.html">
                   Testimonial
                 </a>
-                <a href="/contact.php">
+                <a href="/contact.html">
                   Contact us
                 </a>
               </div>
