--- a/testimonial.html
+++ b/testimonial.html
@@ -78,50 +78,29 @@
               <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav  ">
                   <li class="nav-item active">
-                    <a class="nav-link" href="/index.php">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.HTML">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/about.php"> About</a>
+                    <a class="nav-link" href="/about.html"> About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/treatment.php">Treatment</a>
+                    <a class="nav-link" href="/treatment.html">Treatment</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/doctor.php">Doctors</a>
+                    <a class="nav-link" href="/doctor.html">Doctors</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/testimonial.php">Testimonial</a>
+                    <a class="nav-link" href="/testimonial.html">Testimonial</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/contact.php">Contact Us</a>
+                    <a class="nav-link" href="/contact.html">Contact Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/healthcarebot.php">Health Bot</a>
+                    <a class="nav-link" href="/healthcarebot.html">Health Bot</a>
                   </li>
                 </ul>
               </div>
-              <div class="quote_btn-container">
-                <a href="/php/login_form.php">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Login
-                  </span>
-                </a>
-                </div> 
-                <div class="quote_btn-container">
-                <a href="/php/register_form.php">
-               
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Sign Up
-                  </span>
-                </a>
-                <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form>
-              </div>
+              
             </div>
           </nav>
         </div>
@@ -274,22 +253,22 @@
                 Useful link
               </h5>
               <div class="info_links_menu">
-              <a class="active" href="/index.php">
-                Home
-              </a>
-              <a href="/about.php">
-                About
-              </a>
-              <a href="/treatment.php">
-                Treatment
-              </a>
-              <a href="/doctor.php">
-                Doctors
-              </a>
-              <a href="/testimonial.php">
-                Testimonial
-              </a>
-              <a href="/contact.php">
+                <a class="active" href="/index.html">
+                  Home
+                </a>
+                <a href="/about.html">
+                  About
+                </a>
+                <a href="/treatment.html">
+                  Treatment
+                </a>
+                <a href="/doctor.html">
+                  Doctors
+                </a>
+                <a href="/testimonial.html">
+                  Testimonial
+                </a>
+                <a href="/contact.html">
                 Contact us
               </a>
               </div>
