--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               </div>
             </div>
             <div class="btn-box">
-              <button type="submit" class="btn ">Submit Now</button>
+              <a href="/submit.html">Submit Now</a>
             </div>
           </form>
         </div>
